*** Unreleased ***
- Add Symfony/HttpFoundation component
- Code refactoring: move initialization in ini.php
- Update PHPMailer using composer and set mail->Sender
- Update phpCAS using composer

*** Version 2.8.03         (12 septembre 2018)   ***
- Correction
Correction du problème empêchant l'affichage des absences sans droits d'administration
Correction du problème empêchant l'ajout d'absence

*** Version 2.8.02         (29 mai 2018)   ***
- Amélioration
Permet l'utilisation d'un fichier lang/custom.php (voir fichier lang/fr_FR.php)

*** Version 2.8.01         (24 mai 2018)   ***
- Améliorations
Absences : gestion des notifications et des droits d'accès avec l'option "Absences-notifications-agent-par-agent"
PlanningHebdo : gestion des notifications et des droits d'accès avec l'option "PlanningHebdo-notifications-agent-par-agent"
Configuration : remplace les menus déroulants par des checkboxes pour les paramètres de type boolean
Configuration / droits : suppression des options de débogage
Heures de présence : permet la sélection de 3 emplois du temps différents selon s'il s'agit d'une semaine standard, avec samedi travaillé ou en ouverture restreinte (option EDTSamedi, incompatible avec PlanningHebdo)

- Correction
Absences : corrige la position des icônes "suppression agent" dans les fiches absences

*** Version 2.8         (11 avril 2018)   ***
- Améliorations
Agents volants : Permet de distinguer une liste d'agents dans les plannings (attribution d'une couleur). Les agents sont choisi semaine par semaine dans le sous-menu Planning / Agents-volants
Planning : Choix d'afficher ou non les heures de SP et les couleurs dans le menu du planning
Planning notification : Affichage du nom du site dans les notifications de plannings validés / modifiés
ICS : Fonction permettant d'envoyer aux agents l'URL de leur calendrier Planning Biblio
Absences : Paramètre permettant d'activer ou non la présélection des agents logués