@@ -3,6 +3,7 @@
 - Code refactoring: move initialization in ini.php
 - Update PHPMailer using composer and set mail->Sender
 - Update phpCAS using composer
+- Replace deprecated mcrypt functions with openssl functions
 
 *** Version 2.8.03         (12 septembre 2018)   ***
 - Correction
